--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: selftest1
+  demands:
+    - agent.name -equals agent1
 
 steps:
 - script: echo Hello, world!
